修改了一些主页瑕疵

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
             <div class="pic">
@@ -41,6 +42,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster1.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
             <div class="pic">
@@ -48,6 +50,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster2.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
         </div>
@@ -57,6 +60,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster3.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
             <div class="pic">
@@ -64,6 +68,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster4.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
             <div class="pic">
@@ -71,6 +76,7 @@
                     <img src="images/earphone.svg">
                     <span>303.2万</span>
                 </p>
+                <img src="images/poster5.jpg" alt="">
                 <p class="desc">和声优谈恋爱什么感觉丨日本男声优撩妹现场</p>
             </div>
         </div>
