完成三个标签页的界面

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         </nav>
     </div>
     <main>
+        <div class="tab-1">
 <section>
     <h2 class="title"><span>推荐歌单</span></h2>
     <div class="songlist">
@@ -124,6 +125,80 @@
             <p class="botbtn">打开APP，发现更多好音乐></p>
             <p class="copyright">网易公司版权所有©1997-2018   杭州乐读科技有限公司运营</p>
         </section>
+        </div>
+
+        <div class="tab-2">
+            <section class="poster">
+                <img src="images/yunmusic.png" alt="" class="music_cloud_text">
+                <img src="images/hottext.png" alt="" class="hot_search_text">
+                <p class="update_time">更新日期：05月15日</p>
+            </section>
+            <section>
+                <ul class="hotsonglist">
+                    <li>
+                        <p class="number">01</p>
+                        <div class="wrap">
+                            <div class="songinfo">
+                                <p class="name">浪人琵琶</p>
+                                <p class="singer">
+                                    <img src="images/sq.png" alt="">
+                                    胡66
+                                </p>
+                            </div>
+                            <img src="images/playicon.png" alt="" class="play_icon">
+                        </div>
+                    </li>
+                    <li>
+                        <p class="number">02</p>
+                        <div class="wrap">
+                            <div class="songinfo">
+                                <p class="name">浪人琵琶</p>
+                                <p class="singer">
+                                    <img src="images/sq.png" alt="">
+                                    胡66
+                                </p>
+                            </div>
+                            <img src="images/playicon.png" alt="" class="play_icon">
+                        </div>
+                    </li>
+                    <li>
+                        <p class="number">03</p>
+                        <div class="wrap">
+                            <div class="songinfo">
+                                <p class="name">浪人琵琶</p>
+                                <p class="singer">
+                                    <img src="images/sq.png" alt="">
+                                    胡66
+                                </p>
+                            </div>
+                            <img src="images/playicon.png" alt="" class="play_icon">
+                        </div>
+                    </li>
+
+                </ul>
+            </section>
+        </div>
+
+        <div class="tab-3">
+            <section class="search_head">
+                <p class="search">
+                    <img src="images/search.svg" alt="">
+                    <input type="text" placeholder="搜索歌曲、歌手、专辑" autofocus>
+                </p>
+            </section>
+            <section class="search_badge">
+                <h2>热门搜索</h2>
+                <div class="wrap">
+                    <span>毛不易</span>
+                    <span>镇魂</span>
+                    <span>陈奕迅</span>
+                    <span>薛之谦</span>
+                    <span>毕业季</span>
+                    <span>E能量</span>
+                    <span>乐华七子</span>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
