完成播放页面的设计

--- a/src/admin.html
+++ b/src/admin.html
@@ -31,10 +31,10 @@
         </section>
     </main>
     <div id="uparea"></div>
-    <script src="js/eventhub.js"></script>
-    <script src="js/songlist.js"></script>
-    <script src="js/upload.js"></script>
-    <script src="js/form.js"></script>
+    <script src="js/public/eventhub.js"></script>
+    <script src="js/admin/songlist.js"></script>
+    <script src="js/admin/upload.js"></script>
+    <script src="js/admin/form.js"></script>
 
 </body>
 </html>
