添加歌词，封面

--- a/src/admin.html
+++ b/src/admin.html
@@ -31,10 +31,11 @@
         </section>
     </main>
     <div id="uparea"></div>
+    <div id="uparea_poster"></div>
     <script src="js/public/eventhub.js"></script>
     <script src="js/admin/songlist.js"></script>
     <script src="js/admin/upload.js"></script>
     <script src="js/admin/form.js"></script>
-
+    <script src="js/admin/upload_poster.js"></script>
 </body>
 </html>
