--- a/src/play.html
+++ b/src/play.html
@@ -7,30 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>网易云音乐</title>
     <link rel="stylesheet" href="css/play.css">
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/leancloud-storage/dist/av-min.js"></script>
+    <script src="../node_modules/js-url/url.js"></script>
 </head>
 <body>
     <div class="wrap">
+        <div class="before"></div>
     <img src="images/needle.png" alt="" class="needle">
     <header>
         <img src="images/logo.png" alt="">
     </header>
-    <section class="disc">
-        <img src="images/disc_default.png" alt="" class="disc_default">
-        <img src="images/poster1.jpg" alt="" class="disc_post">
-        <img src="images/disc.png" alt="" class="disc_pie">
-        <img src="images/disc_light.png" alt="" class="disc_light">
-        <img src="images/disc_play.png" alt="" class="disc_play">
-    </section>
-    <section class="bot">
-        <h2 class="songname">我爱上班</h2>
-        <div class="lyrics">
-            <p>作曲：桑泉</p>
-            <p>作词：桑泉</p>
-            <p>不想上班</p>
-            <p>不想上班</p>
-            <p>不想上班</p>
-        </div>
-    </section>
+    <section class="disc"></section>
+    <section class="bot"></section>
     </div>
+    <script src="js/public/eventhub.js"></script>
+    <script src="js/play/audio.js"></script>
+    <script src="js/play/discplay.js"></script>
+    <script src="js/play/lyrics.js"></script>
 </body>
 </html>
